--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartbinoptionsdata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartbinoptionsdata.yml
@@ -1,10 +1,17 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartBinOptionsData:interface'
-    summary: 描述通过调用返回的数据的接口`chartBinOptions.toJSON()`<!-- -->.
-    name: Excel.Interfaces.ChartBinOptionsData
-    fullName: Excel.Interfaces.ChartBinOptionsData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
+### YamlMime:TSType
+name: Excel.Interfaces.ChartBinOptionsData
+uid: excel!Excel.Interfaces.ChartBinOptionsData:interface
+package: excel!
+fullName: Excel.Interfaces.ChartBinOptionsData
+summary: 描述通过调用返回的数据的接口 `chartBinOptions.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+metadata:
+  ms.openlocfilehash: b5d1eda41c62f44df79fea21862dc1226e1452b5
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49186629"
