--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.chartlegendloadoptions.yml
@@ -1,174 +1,178 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions:interface'
-    summary: |-
-      表示图表中的图例。
+### YamlMime:TSType
+name: Excel.Interfaces.ChartLegendLoadOptions
+uid: excel!Excel.Interfaces.ChartLegendLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.ChartLegendLoadOptions
+summary: >-
+  表示图表中的图例。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.ChartLegendLoadOptions
-    fullName: Excel.Interfaces.ChartLegendLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#format:member'
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#height:member'
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#left:member'
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#overlay:member'
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#position:member'
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#showShadow:member'
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#top:member'
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#visible:member'
-      - 'excel!Excel.Interfaces.ChartLegendLoadOptions#width:member'
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#format:member'
-    summary: |-
-      表示图表图例的格式，包括填充和字体格式。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: format
-    fullName: format
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'format?: Excel.Interfaces.ChartLegendFormatLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#height:member'
-    summary: |-
-      指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: format
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#format:member
+  package: excel!
+  fullName: format
+  summary: >-
+    表示图表图例的格式，包括填充和字体格式。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: height
-    fullName: height
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'height?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#left:member'
-    summary: |-
-      指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: left
-    fullName: left
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'left?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#overlay:member'
-    summary: |-
-      指定图表图例是否应与图表的主体重叠。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'format?: Excel.Interfaces.ChartLegendFormatLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartLegendFormatLoadOptions:interface" />
+- name: height
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#height:member
+  package: excel!
+  fullName: height
+  summary: >-
+    指定图表上的图例的高度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: overlay
-    fullName: overlay
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'overlay?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#position:member'
-    summary: |-
-      指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#showShadow:member'
-    summary: |-
-      指定图例在图表上是否有阴影。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'height?: boolean;'
+    return:
+      type: boolean
+- name: left
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#left:member
+  package: excel!
+  fullName: left
+  summary: >-
+    指定图表上的图例的左（以磅为单位）。 如果图例不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showShadow
-    fullName: showShadow
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showShadow?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#top:member'
-    summary: |-
-      指定图表图例的顶端。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: top
-    fullName: top
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'top?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#visible:member'
-    summary: |-
-      指定 ChartLegend 是否可见。
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'left?: boolean;'
+    return:
+      type: boolean
+- name: overlay
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#overlay:member
+  package: excel!
+  fullName: overlay
+  summary: >-
+    指定图表图例是否应与图表的主体重叠。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: visible
-    fullName: visible
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visible?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.ChartLegendLoadOptions#width:member'
-    summary: |-
-      指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: width
-    fullName: width
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'width?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ChartLegendFormatLoadOptions:interface'
-    name: Excel.Interfaces.ChartLegendFormatLoadOptions
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'overlay?: boolean;'
+    return:
+      type: boolean
+- name: position
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    指定图例在图表上的位置。 有关详细信息，请参阅 ChartLegendPosition。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: boolean;'
+    return:
+      type: boolean
+- name: showShadow
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#showShadow:member
+  package: excel!
+  fullName: showShadow
+  summary: >-
+    指定图例在图表上是否有阴影。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showShadow?: boolean;'
+    return:
+      type: boolean
+- name: top
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#top:member
+  package: excel!
+  fullName: top
+  summary: >-
+    指定图表图例的顶端。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'top?: boolean;'
+    return:
+      type: boolean
+- name: visible
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#visible:member
+  package: excel!
+  fullName: visible
+  summary: >-
+    指定 ChartLegend 是否可见。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visible?: boolean;'
+    return:
+      type: boolean
+- name: width
+  uid: excel!Excel.Interfaces.ChartLegendLoadOptions#width:member
+  package: excel!
+  fullName: width
+  summary: >-
+    指定图表上的图例的宽度（以磅为单位）。 如果图例不可见，则为 Null。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'width?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 3b29d55b14a81189e65d7c9a6b16ef9566f62347
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49186559"
