--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.datapivothierarchydata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.datapivothierarchydata.yml
@@ -1,137 +1,130 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData:interface'
-    summary: 描述通过调用返回的数据的接口`dataPivotHierarchy.toJSON()`<!-- -->.
-    name: Excel.Interfaces.DataPivotHierarchyData
-    fullName: Excel.Interfaces.DataPivotHierarchyData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.DataPivotHierarchyData#field:member'
-      - 'excel!Excel.Interfaces.DataPivotHierarchyData#id:member'
-      - 'excel!Excel.Interfaces.DataPivotHierarchyData#name:member'
-      - 'excel!Excel.Interfaces.DataPivotHierarchyData#numberFormat:member'
-      - 'excel!Excel.Interfaces.DataPivotHierarchyData#position:member'
-      - 'excel!Excel.Interfaces.DataPivotHierarchyData#showAs:member'
-      - 'excel!Excel.Interfaces.DataPivotHierarchyData#summarizeBy:member'
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#field:member'
-    summary: |-
-      返回与 DataPivotHierarchy 相关联的 PivotFields。
+### YamlMime:TSType
+name: Excel.Interfaces.DataPivotHierarchyData
+uid: excel!Excel.Interfaces.DataPivotHierarchyData:interface
+package: excel!
+fullName: Excel.Interfaces.DataPivotHierarchyData
+summary: 描述通过调用返回的数据的接口 `dataPivotHierarchy.toJSON()`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: field
+  uid: excel!Excel.Interfaces.DataPivotHierarchyData#field:member
+  package: excel!
+  fullName: field
+  summary: >-
+    返回与 DataPivotHierarchy 相关联的 PivotFields。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: field
-    fullName: field
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'field?: Excel.Interfaces.PivotFieldData;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.PivotFieldData:interface'
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#id:member'
-    summary: |-
-      DataPivotHierarchy ID。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#name:member'
-    summary: |-
-      DataPivotHierarchy 的名称。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'field?: Excel.Interfaces.PivotFieldData;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.PivotFieldData:interface" />
+- name: id
+  uid: excel!Excel.Interfaces.DataPivotHierarchyData#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    DataPivotHierarchy ID。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#numberFormat:member'
-    summary: |-
-      DataPivotHierarchy 的数字格式。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: numberFormat
-    fullName: numberFormat
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'numberFormat?: string;'
-      return:
-        type:
-          - string
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#position:member'
-    summary: |-
-      DataPivotHierarchy 的位置。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: string;'
+    return:
+      type: string
+- name: name
+  uid: excel!Excel.Interfaces.DataPivotHierarchyData#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    DataPivotHierarchy 的名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: number;'
-      return:
-        type:
-          - number
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#showAs:member'
-    summary: |-
-      指定是否应将数据显示为特定的汇总计算。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showAs
-    fullName: showAs
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showAs?: Excel.ShowAsRule;'
-      return:
-        type:
-          - 'excel!Excel.ShowAsRule:interface'
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#summarizeBy:member'
-    summary: |-
-      指定是否显示 DataPivotHierarchy 的所有项目。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: string;'
+    return:
+      type: string
+- name: numberFormat
+  uid: excel!Excel.Interfaces.DataPivotHierarchyData#numberFormat:member
+  package: excel!
+  fullName: numberFormat
+  summary: >-
+    DataPivotHierarchy 的数字格式。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: summarizeBy
-    fullName: summarizeBy
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'summarizeBy?: Excel.AggregationFunction | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.DataPivotHierarchyData#summarizeBy~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.PivotFieldData:interface'
-    name: Excel.Interfaces.PivotFieldData
-  - uid: 'excel!Excel.ShowAsRule:interface'
-    name: Excel.ShowAsRule
-  - uid: 'excel!Excel.Interfaces.DataPivotHierarchyData#summarizeBy~0:complex'
-    name: Excel.AggregationFunction | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP"
-    fullName: Excel.AggregationFunction | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP"
-    spec.typeScript:
-      - uid: 'excel!Excel.AggregationFunction:enum'
-        name: Excel.AggregationFunction
-        fullName: Excel.AggregationFunction
-      - name: ' | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP"'
-        fullName: ' | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP"'
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'numberFormat?: string;'
+    return:
+      type: string
+- name: position
+  uid: excel!Excel.Interfaces.DataPivotHierarchyData#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    DataPivotHierarchy 的位置。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: number;'
+    return:
+      type: number
+- name: showAs
+  uid: excel!Excel.Interfaces.DataPivotHierarchyData#showAs:member
+  package: excel!
+  fullName: showAs
+  summary: >-
+    指定是否应将数据显示为特定的汇总计算。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showAs?: Excel.ShowAsRule;'
+    return:
+      type: <xref uid="excel!Excel.ShowAsRule:interface" />
+- name: summarizeBy
+  uid: excel!Excel.Interfaces.DataPivotHierarchyData#summarizeBy:member
+  package: excel!
+  fullName: summarizeBy
+  summary: >-
+    指定是否显示 DataPivotHierarchy 的所有项目。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'summarizeBy?: Excel.AggregationFunction | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP";'
+    return:
+      type: <xref uid="excel!Excel.AggregationFunction:enum" /> | "Unknown" | "Automatic" | "Sum" | "Count" | "Average" | "Max" | "Min" | "Product" | "CountNumbers" | "StandardDeviation" | "StandardDeviationP" | "Variance" | "VarianceP"
+metadata:
+  ms.openlocfilehash: 80e1573acb4511ac423e14b0aac79f5b3066642e
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49186314"
