--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivothierarchycollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivothierarchycollectionloadoptions.yml
@@ -1,59 +1,66 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions:interface'
-    summary: |-
-      代表属于数据透视表的所有 PivotHierarchies 的集合。
+### YamlMime:TSType
+name: Excel.Interfaces.PivotHierarchyCollectionLoadOptions
+uid: excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.PivotHierarchyCollectionLoadOptions
+summary: >-
+  代表属于数据透视表的所有 PivotHierarchies 的集合。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.PivotHierarchyCollectionLoadOptions
-    fullName: Excel.Interfaces.PivotHierarchyCollectionLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions#name:member'
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions#id:member'
-    summary: |-
-      对于集合中的每一项： PivotHierarchy 的 Id。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions#name:member'
-    summary: |-
-      对于集合中的每一项： PivotHierarchy 的名称。
+  \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: id
+  uid: excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    对于集合中的每一项： PivotHierarchy 的 Id。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.PivotHierarchyCollectionLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    对于集合中的每一项： PivotHierarchy 的名称。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: 988d844bd9ec3ca4a040a7adaed535c1e209cf18
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49186251"
