--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivothierarchycollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivothierarchycollectionupdatedata.yml
@@ -1,33 +1,30 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionUpdateData:interface'
-    summary: '一个用于更新 PivotHierarchyCollection 对象上的数据的接口，可用于`pivotHierarchyCollection.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.PivotHierarchyCollectionUpdateData
-    fullName: Excel.Interfaces.PivotHierarchyCollectionUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotHierarchyCollectionUpdateData#items:member'
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionUpdateData#items:member'
-    name: items
-    fullName: items
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'items?: Excel.Interfaces.PivotHierarchyData[];'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.PivotHierarchyCollectionUpdateData#items~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.PivotHierarchyCollectionUpdateData#items~0:complex'
-    name: 'Excel.Interfaces.PivotHierarchyData[]'
-    fullName: 'Excel.Interfaces.PivotHierarchyData[]'
-    spec.typeScript:
-      - uid: 'excel!Excel.Interfaces.PivotHierarchyData:interface'
-        name: Excel.Interfaces.PivotHierarchyData
-        fullName: Excel.Interfaces.PivotHierarchyData
-      - name: '[]'
-        fullName: '[]'
+### YamlMime:TSType
+name: Excel.Interfaces.PivotHierarchyCollectionUpdateData
+uid: excel!Excel.Interfaces.PivotHierarchyCollectionUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotHierarchyCollectionUpdateData
+summary: 一个用于更新 PivotHierarchyCollection 对象上的数据的接口，可用于 `pivotHierarchyCollection.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: items
+  uid: excel!Excel.Interfaces.PivotHierarchyCollectionUpdateData#items:member
+  package: excel!
+  fullName: items
+  summary: ''
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'items?: Excel.Interfaces.PivotHierarchyData[];'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.PivotHierarchyData:interface" />[]
+metadata:
+  ms.openlocfilehash: 5095c90b52de2b17a5e852e5e5b25eef9dcfaaa8
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49186244"
