--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivotlayoutupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.pivotlayoutupdatedata.yml
@@ -1,94 +1,82 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData:interface'
-    summary: '一个用于更新 PivotLayout 对象上的数据的接口，可用于`pivotLayout.set({ ... })`<!-- -->.'
-    name: Excel.Interfaces.PivotLayoutUpdateData
-    fullName: Excel.Interfaces.PivotLayoutUpdateData
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.PivotLayoutUpdateData#layoutType:member'
-      - 'excel!Excel.Interfaces.PivotLayoutUpdateData#showColumnGrandTotals:member'
-      - 'excel!Excel.Interfaces.PivotLayoutUpdateData#showRowGrandTotals:member'
-      - 'excel!Excel.Interfaces.PivotLayoutUpdateData#subtotalLocation:member'
-  - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#layoutType:member'
-    summary: |-
-      此属性指示数据透视表上的所有字段的 PivotLayoutType。 如果字段状态不同，则为 null。
+### YamlMime:TSType
+name: Excel.Interfaces.PivotLayoutUpdateData
+uid: excel!Excel.Interfaces.PivotLayoutUpdateData:interface
+package: excel!
+fullName: Excel.Interfaces.PivotLayoutUpdateData
+summary: 一个用于更新 PivotLayout 对象上的数据的接口，可用于 `pivotLayout.set({ ... })`<!-- -->.
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: layoutType
+  uid: excel!Excel.Interfaces.PivotLayoutUpdateData#layoutType:member
+  package: excel!
+  fullName: layoutType
+  summary: >-
+    此属性指示数据透视表上的所有字段的 PivotLayoutType。 如果字段状态不同，则为 null。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: layoutType
-    fullName: layoutType
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'layoutType?: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.PivotLayoutUpdateData#layoutType~0:complex'
-  - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#showColumnGrandTotals:member'
-    summary: |-
-      指定数据透视表是否显示列总计。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showColumnGrandTotals
-    fullName: showColumnGrandTotals
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showColumnGrandTotals?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#showRowGrandTotals:member'
-    summary: |-
-      指定数据透视表是否显示行的总计。
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'layoutType?: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline";'
+    return:
+      type: <xref uid="excel!Excel.PivotLayoutType:enum" /> | "Compact" | "Tabular" | "Outline"
+- name: showColumnGrandTotals
+  uid: excel!Excel.Interfaces.PivotLayoutUpdateData#showColumnGrandTotals:member
+  package: excel!
+  fullName: showColumnGrandTotals
+  summary: >-
+    指定数据透视表是否显示列总计。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showRowGrandTotals
-    fullName: showRowGrandTotals
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showRowGrandTotals?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#subtotalLocation:member'
-    summary: |-
-      此属性指示数据透视表上的所有字段的 SubtotalLocationType。 如果字段状态不同，则为 null。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: subtotalLocation
-    fullName: subtotalLocation
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'subtotalLocation?: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off";'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.PivotLayoutUpdateData#subtotalLocation~0:complex'
-references:
-  - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#layoutType~0:complex'
-    name: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline"
-    fullName: Excel.PivotLayoutType | "Compact" | "Tabular" | "Outline"
-    spec.typeScript:
-      - uid: 'excel!Excel.PivotLayoutType:enum'
-        name: Excel.PivotLayoutType
-        fullName: Excel.PivotLayoutType
-      - name: ' | "Compact" | "Tabular" | "Outline"'
-        fullName: ' | "Compact" | "Tabular" | "Outline"'
-  - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#subtotalLocation~0:complex'
-    name: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
-    fullName: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
-    spec.typeScript:
-      - uid: 'excel!Excel.SubtotalLocationType:enum'
-        name: Excel.SubtotalLocationType
-        fullName: Excel.SubtotalLocationType
-      - name: ' | "AtTop" | "AtBottom" | "Off"'
-        fullName: ' | "AtTop" | "AtBottom" | "Off"'
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showColumnGrandTotals?: boolean;'
+    return:
+      type: boolean
+- name: showRowGrandTotals
+  uid: excel!Excel.Interfaces.PivotLayoutUpdateData#showRowGrandTotals:member
+  package: excel!
+  fullName: showRowGrandTotals
+  summary: >-
+    指定数据透视表是否显示行的总计。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showRowGrandTotals?: boolean;'
+    return:
+      type: boolean
+- name: subtotalLocation
+  uid: excel!Excel.Interfaces.PivotLayoutUpdateData#subtotalLocation:member
+  package: excel!
+  fullName: subtotalLocation
+  summary: >-
+    此属性指示数据透视表上的所有字段的 SubtotalLocationType。 如果字段状态不同，则为 null。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'subtotalLocation?: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off";'
+    return:
+      type: <xref uid="excel!Excel.SubtotalLocationType:enum" /> | "AtTop" | "AtBottom" | "Off"
+metadata:
+  ms.openlocfilehash: d13793e96ae08a1fb7a7ea6e710535515295a568
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49186153"
