--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.worksheetloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.worksheetloadoptions.yml
@@ -1,226 +1,226 @@
-### YamlMime:UniversalReference
-items:
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
-    summary: |-
-      Excel 工作表是由单元格组成的网格。 它可以包含数据、表、图表等。若要了解有关工作表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理工作表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-worksheets)<!-- -->.
+### YamlMime:TSType
+name: Excel.Interfaces.WorksheetLoadOptions
+uid: excel!Excel.Interfaces.WorksheetLoadOptions:interface
+package: excel!
+fullName: Excel.Interfaces.WorksheetLoadOptions
+summary: >-
+  Excel 工作表是由单元格组成的网格。 它可以包含数据、表、图表等。若要了解有关工作表对象模型的详细信息，请参阅 [使用 Excel JAVASCRIPT API 处理工作表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-worksheets)<!-- -->.
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: Excel.Interfaces.WorksheetLoadOptions
-    fullName: Excel.Interfaces.WorksheetLoadOptions
-    langs:
-      - typeScript
-    type: interface
-    package: excel!
-    children:
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#$all:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#charts:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#id:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#position:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#protection:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#showGridlines:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#showHeadings:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#standardHeight:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#standardWidth:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#tabColor:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#tables:member'
-      - 'excel!Excel.Interfaces.WorksheetLoadOptions#visibility:member'
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#$all:member'
-    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
-    name: $all
-    fullName: $all
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: '$all?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#charts:member'
-    summary: |-
-      返回作为工作表的一部分的图表的集合。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: charts
-    fullName: charts
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'charts?: Excel.Interfaces.ChartCollectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.ChartCollectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#id:member'
-    summary: |-
-      返回用于唯一标识指定工作簿中工作表的值。 即使工作表被重命名或移动，标识符的值仍然相同。
+  \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+remarks: ''
+isPreview: false
+isDeprecated: false
+type: interface
+properties:
+- name: $all
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#$all:member
+  package: excel!
+  fullName: $all
+  summary: '`$all`为 LoadOptions 指定加载所有标量属性 (例如：`Range.address`<!-- -->) （而不是导航属性） (例如： `Range.format.fill.color`<!-- -->).'
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: '$all?: boolean;'
+    return:
+      type: boolean
+- name: charts
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#charts:member
+  package: excel!
+  fullName: charts
+  summary: >-
+    返回作为工作表的一部分的图表的集合。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: id
-    fullName: id
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'id?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#name:member'
-    summary: |-
-      工作表的显示名称。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: name
-    fullName: name
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'name?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#position:member'
-    summary: |-
-      工作表在工作簿中的位置，从零开始。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'charts?: Excel.Interfaces.ChartCollectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.ChartCollectionLoadOptions:interface" />
+- name: id
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#id:member
+  package: excel!
+  fullName: id
+  summary: >-
+    返回用于唯一标识指定工作簿中工作表的值。 即使工作表被重命名或移动，标识符的值仍然相同。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: position
-    fullName: position
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'position?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#protection:member'
-    summary: |-
-      返回表工作表的工作表保护对象。
 
-      \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: protection
-    fullName: protection
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'protection?: Excel.Interfaces.WorksheetProtectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.WorksheetProtectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#showGridlines:member'
-    summary: |-
-      指定是否对用户显示网格线。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'id?: boolean;'
+    return:
+      type: boolean
+- name: name
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#name:member
+  package: excel!
+  fullName: name
+  summary: >-
+    工作表的显示名称。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showGridlines
-    fullName: showGridlines
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showGridlines?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#showHeadings:member'
-    summary: |-
-      指定标题是否对用户可见。
 
-      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: showHeadings
-    fullName: showHeadings
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'showHeadings?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#standardHeight:member'
-    summary: |-
-      返回工作表中所有行的标准（默认）行高，以磅为单位。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'name?: boolean;'
+    return:
+      type: boolean
+- name: position
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#position:member
+  package: excel!
+  fullName: position
+  summary: >-
+    工作表在工作簿中的位置，从零开始。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: standardHeight
-    fullName: standardHeight
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'standardHeight?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#standardWidth:member'
-    summary: |-
-      指定工作表中所有列的标准（默认）宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: standardWidth
-    fullName: standardWidth
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'standardWidth?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#tabColor:member'
-    summary: |-
-      工作表的选项卡颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为 " \# 123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'position?: boolean;'
+    return:
+      type: boolean
+- name: protection
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#protection:member
+  package: excel!
+  fullName: protection
+  summary: >-
+    返回表工作表的工作表保护对象。
 
-      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: tabColor
-    fullName: tabColor
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'tabColor?: boolean;'
-      return:
-        type:
-          - boolean
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#tables:member'
-    summary: |-
-      属于工作表的表的集合。
 
-      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: tables
-    fullName: tables
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'tables?: Excel.Interfaces.TableCollectionLoadOptions;'
-      return:
-        type:
-          - 'excel!Excel.Interfaces.TableCollectionLoadOptions:interface'
-  - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions#visibility:member'
-    summary: |-
-      工作表的可见性。
+    \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'protection?: Excel.Interfaces.WorksheetProtectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.WorksheetProtectionLoadOptions:interface" />
+- name: showGridlines
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#showGridlines:member
+  package: excel!
+  fullName: showGridlines
+  summary: >-
+    指定是否对用户显示网格线。
 
-      \[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
-    name: visibility
-    fullName: visibility
-    langs:
-      - typeScript
-    type: property
-    syntax:
-      content: 'visibility?: boolean;'
-      return:
-        type:
-          - boolean
-references:
-  - uid: 'excel!Excel.Interfaces.ChartCollectionLoadOptions:interface'
-    name: Excel.Interfaces.ChartCollectionLoadOptions
-  - uid: 'excel!Excel.Interfaces.WorksheetProtectionLoadOptions:interface'
-    name: Excel.Interfaces.WorksheetProtectionLoadOptions
-  - uid: 'excel!Excel.Interfaces.TableCollectionLoadOptions:interface'
-    name: Excel.Interfaces.TableCollectionLoadOptions
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showGridlines?: boolean;'
+    return:
+      type: boolean
+- name: showHeadings
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#showHeadings:member
+  package: excel!
+  fullName: showHeadings
+  summary: >-
+    指定标题是否对用户可见。
+
+
+    \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'showHeadings?: boolean;'
+    return:
+      type: boolean
+- name: standardHeight
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#standardHeight:member
+  package: excel!
+  fullName: standardHeight
+  summary: >-
+    返回工作表中所有行的标准（默认）行高，以磅为单位。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'standardHeight?: boolean;'
+    return:
+      type: boolean
+- name: standardWidth
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#standardWidth:member
+  package: excel!
+  fullName: standardWidth
+  summary: >-
+    指定工作表中所有列的标准 (默认) 宽度。 一个列宽单位等于“常规”样式中一个字符的宽度。 对于比例字体，则使用字符 0（零）的宽度。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'standardWidth?: boolean;'
+    return:
+      type: boolean
+- name: tabColor
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#tabColor:member
+  package: excel!
+  fullName: tabColor
+  summary: >-
+    工作表的选项卡颜色。 检索选项卡颜色时，如果工作表不可见，则值将为 null。 如果工作表可见但选项卡颜色设置为自动，将返回一个空字符串。 否则，在设置颜色时，属性将设置为颜色，格式为 " \# 123456"，则使用空字符串设置 "自动" 颜色，或使用实际颜色。
+
+
+    \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'tabColor?: boolean;'
+    return:
+      type: boolean
+- name: tables
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#tables:member
+  package: excel!
+  fullName: tables
+  summary: >-
+    属于工作表的表的集合。
+
+
+    \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'tables?: Excel.Interfaces.TableCollectionLoadOptions;'
+    return:
+      type: <xref uid="excel!Excel.Interfaces.TableCollectionLoadOptions:interface" />
+- name: visibility
+  uid: excel!Excel.Interfaces.WorksheetLoadOptions#visibility:member
+  package: excel!
+  fullName: visibility
+  summary: >-
+    工作表的可见性。
+
+
+    \[[API 集： ExcelApi 1.1 用于读取可见性; 1.2 用于设置。](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]
+  remarks: ''
+  isPreview: false
+  isDeprecated: false
+  syntax:
+    content: 'visibility?: boolean;'
+    return:
+      type: boolean
+metadata:
+  ms.openlocfilehash: d5f8246d80cd6b609e085ce789b86fcd7b4cb7b1
+  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.translationtype: MT
+  ms.contentlocale: zh-CN
+  ms.lasthandoff: 11/18/2020
+  ms.locfileid: "49186013"
